--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "Co2App",
     "slug": "Co2App",
+	"terw":"t",
     "privacy": "public",
     "sdkVersion": "35.0.0",
     "platforms": [
